borramos estilos al container

--- a/style-ejemplos.css
+++ b/style-ejemplos.css
@@ -100,10 +100,10 @@ a:-webkit-any-link {
   cursor: pointer;
 }
 
-.container {
+/* .container {
   width: 500px;   /* This sets the width */
   margin: 0 auto; /* This automatically sets left/right margins */
-}
+} */
 
 .list-inline {
   list-style: none;
